@@ -1,6 +1,11 @@
 package poker.common;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.Comparator;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 /**
@@ -66,52 +71,32 @@ public class HandEvaluator {
         if (cards.size() < 5) {
             throw new IllegalArgumentException("Need at least 5 cards to evaluate a hand");
         }
-        
-        // For now, if we have more than 5 cards, just use the first 5
-        // TODO: IMPORTANT - This is incorrect for Texas Hold'em!
-        // TODO: Must evaluate all C(n,5) combinations to find the best 5-card hand
-        // TODO: For 7 cards, this means checking all 21 combinations
-        List<Card> handCards = cards.size() > 5 ? cards.subList(0, 5) : cards;
-        
-        if (isRoyalFlush(handCards)) {
-            return new HandResult(HandRank.ROYAL_FLUSH, Collections.singletonList(14));
+
+        // Texas Hold'em: if we have more than 5 cards, we must evaluate all 5-card combinations
+        // and select the best.
+        if (cards.size() == 5) {
+            return evaluateFive(cards);
         }
-        
-        if (isStraightFlush(handCards)) {
-            return new HandResult(HandRank.STRAIGHT_FLUSH, 
-                Collections.singletonList(getHighCard(handCards).getRank().getValue()));
+
+        HandResult best = null;
+        int n = cards.size();
+        for (int a = 0; a < n - 4; a++) {
+            for (int b = a + 1; b < n - 3; b++) {
+                for (int c = b + 1; c < n - 2; c++) {
+                    for (int d = c + 1; d < n - 1; d++) {
+                        for (int e = d + 1; e < n; e++) {
+                            List<Card> five = List.of(cards.get(a), cards.get(b), cards.get(c), cards.get(d), cards.get(e));
+                            HandResult r = evaluateFive(five);
+                            if (best == null || r.compareTo(best) > 0) {
+                                best = r;
+                            }
+                        }
+                    }
+                }
+            }
         }
-        
-        if (isFourOfAKind(handCards)) {
-            return new HandResult(HandRank.FOUR_OF_A_KIND, getFourOfAKindTiebreakers(handCards));
-        }
-        
-        if (isFullHouse(handCards)) {
-            return new HandResult(HandRank.FULL_HOUSE, getFullHouseTiebreakers(handCards));
-        }
-        
-        if (isFlush(handCards)) {
-            return new HandResult(HandRank.FLUSH, getHighCardValues(handCards));
-        }
-        
-        if (isStraight(handCards)) {
-            return new HandResult(HandRank.STRAIGHT, 
-                Collections.singletonList(getHighCard(handCards).getRank().getValue()));
-        }
-        
-        if (isThreeOfAKind(handCards)) {
-            return new HandResult(HandRank.THREE_OF_A_KIND, getThreeOfAKindTiebreakers(handCards));
-        }
-        
-        if (isTwoPair(handCards)) {
-            return new HandResult(HandRank.TWO_PAIR, getTwoPairTiebreakers(handCards));
-        }
-        
-        if (isPair(handCards)) {
-            return new HandResult(HandRank.PAIR, getPairTiebreakers(handCards));
-        }
-        
-        return new HandResult(HandRank.HIGH_CARD, getHighCardValues(handCards));
+
+        return best;
     }
     
     /**
@@ -122,13 +107,65 @@ public class HandEvaluator {
     public static HandResult evaluateHand(Hand hand) {
         return evaluateHand(hand.getCards());
     }
+
+    private static HandResult evaluateFive(List<Card> handCards) {
+        if (handCards.size() != 5) {
+            throw new IllegalArgumentException("evaluateFive expects exactly 5 cards");
+        }
+
+        if (isRoyalFlush(handCards)) {
+            return new HandResult(HandRank.ROYAL_FLUSH, Collections.singletonList(14));
+        }
+
+        if (isStraightFlush(handCards)) {
+            return new HandResult(HandRank.STRAIGHT_FLUSH,
+                Collections.singletonList(getStraightHighValue(handCards)));
+        }
+
+        if (isFourOfAKind(handCards)) {
+            return new HandResult(HandRank.FOUR_OF_A_KIND, getFourOfAKindTiebreakers(handCards));
+        }
+
+        if (isFullHouse(handCards)) {
+            return new HandResult(HandRank.FULL_HOUSE, getFullHouseTiebreakers(handCards));
+        }
+
+        if (isFlush(handCards)) {
+            return new HandResult(HandRank.FLUSH, getHighCardValues(handCards));
+        }
+
+        if (isStraight(handCards)) {
+            return new HandResult(HandRank.STRAIGHT,
+                Collections.singletonList(getStraightHighValue(handCards)));
+        }
+
+        if (isThreeOfAKind(handCards)) {
+            return new HandResult(HandRank.THREE_OF_A_KIND, getThreeOfAKindTiebreakers(handCards));
+        }
+
+        if (isTwoPair(handCards)) {
+            return new HandResult(HandRank.TWO_PAIR, getTwoPairTiebreakers(handCards));
+        }
+
+        if (isPair(handCards)) {
+            return new HandResult(HandRank.PAIR, getPairTiebreakers(handCards));
+        }
+
+        return new HandResult(HandRank.HIGH_CARD, getHighCardValues(handCards));
+    }
     
     public static boolean isRoyalFlush(List<Card> cards) {
         if (!isFlush(cards) || !isStraight(cards)) {
             return false;
         }
-        // Check if high card is Ace
-        return getHighCard(cards).getRank() == Card.Rank.ACE;
+        // Must be exactly 10-J-Q-K-A of the same suit
+        Set<Card.Rank> ranks = cards.stream().map(Card::getRank).collect(Collectors.toSet());
+        return ranks.size() == 5
+            && ranks.contains(Card.Rank.TEN)
+            && ranks.contains(Card.Rank.JACK)
+            && ranks.contains(Card.Rank.QUEEN)
+            && ranks.contains(Card.Rank.KING)
+            && ranks.contains(Card.Rank.ACE);
     }
     
     public static boolean isStraightFlush(List<Card> cards) {
@@ -155,28 +192,41 @@ public class HandEvaluator {
     public static boolean isStraight(List<Card> cards) {
         List<Card> sorted = new ArrayList<>(cards);
         Collections.sort(sorted);
-        
+
         // Check normal straight
-        boolean isStraight = true;
+        boolean normal = true;
         for (int i = 1; i < sorted.size(); i++) {
             if (sorted.get(i).getRank().getValue() != sorted.get(i - 1).getRank().getValue() + 1) {
-                isStraight = false;
+                normal = false;
                 break;
             }
         }
-        
-        if (isStraight) return true;
-        
-        // Check for Ace-low straight (A-2-3-4-5)
-        if (sorted.get(4).getRank() == Card.Rank.ACE &&
-            sorted.get(0).getRank() == Card.Rank.TWO &&
-            sorted.get(1).getRank() == Card.Rank.THREE &&
-            sorted.get(2).getRank() == Card.Rank.FOUR &&
-            sorted.get(3).getRank() == Card.Rank.FIVE) {
+
+        if (normal) {
             return true;
         }
-        
-        return false;
+
+        // Ace-low straight (A-2-3-4-5)
+        return sorted.get(4).getRank() == Card.Rank.ACE
+            && sorted.get(0).getRank() == Card.Rank.TWO
+            && sorted.get(1).getRank() == Card.Rank.THREE
+            && sorted.get(2).getRank() == Card.Rank.FOUR
+            && sorted.get(3).getRank() == Card.Rank.FIVE;
+    }
+
+    private static int getStraightHighValue(List<Card> cards) {
+        // Assumes exactly 5 cards.
+        List<Card> sorted = new ArrayList<>(cards);
+        Collections.sort(sorted);
+        // Wheel: A-2-3-4-5 => high is 5
+        if (sorted.get(4).getRank() == Card.Rank.ACE
+            && sorted.get(0).getRank() == Card.Rank.TWO
+            && sorted.get(1).getRank() == Card.Rank.THREE
+            && sorted.get(2).getRank() == Card.Rank.FOUR
+            && sorted.get(3).getRank() == Card.Rank.FIVE) {
+            return Card.Rank.FIVE.getValue();
+        }
+        return sorted.get(4).getRank().getValue();
     }
     
     public static boolean isThreeOfAKind(List<Card> cards) {
@@ -213,10 +263,6 @@ public class HandEvaluator {
     private static Map<Card.Rank, Long> getRankCounts(List<Card> cards) {
         return cards.stream()
             .collect(Collectors.groupingBy(Card::getRank, Collectors.counting()));
-    }
-    
-    private static Card getHighCard(List<Card> cards) {
-        return Collections.max(cards);
     }
     
     private static List<Integer> getHighCardValues(List<Card> cards) {
